--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -222,8 +222,6 @@ main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > b
 main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > button:nth-child(4) a{
     color: #000000;
 }
-
-
     /**
     * social links section
     */
@@ -291,8 +289,96 @@ main > section:first-child > section:first-child > div:first-child {
     transition: all 2s;
 }
 
-/* responsive */
+/* responsive  */
+/*========================================================================================================================*/
+@media (max-width: 1231px){
+    main > section:first-child > section > div:first-child > aside:nth-child(2) > div:first-child {
+        width: 380px;
+        height: 487px;
+    }
 
+    main > section:first-child > section:first-child > div:first-child {
+        margin-top: 2px;
+        transition: all 2s;
+    }
+}
+
+@media (max-width: 1179px) {
+    /*home section*/
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h3:first-child {
+        font-size: 26px;
+        transition: all 2s;
+    }
+
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h1:nth-child(2) > span {
+        font-size: 45px;
+        transition: all 2s;
+    }
+
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h1:nth-child(3) > span {
+        font-size: 45px;
+        transition: all 2s;
+    }
+
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h1:nth-child(2) {
+        font-size: 45px;
+        margin-top: 9px;
+        transition: all 2s;
+    }
+
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h1:nth-child(3) {
+        font-size: 40px;
+        margin-top: 9px;
+        margin-bottom: 12px;
+        transition: all 2s;
+    }
+
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h1:nth-child(3) {
+        font-size: 40px;
+        margin-top: 9px;
+        margin-bottom: 12px;
+        transition: all 2s;
+    }
+
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > button:nth-child(4) {
+        width: 177px;
+        height: 57px;
+        font-size: 22px;
+        transition: all 2s;
+    }
+
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > button:nth-child(4) > div {
+        top: 4px;
+        left: 120px;
+        height: 50px;
+        width: 52px;
+        transition: all 2s;
+    }
+
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > section:nth-child(5) > h3 {
+        font-size: 18px;
+        transition: all 2s;
+    }
+
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > section:nth-child(5) > nav > div {
+        width: 55px;
+        height: 55px;
+        transition: all 2s;
+    }
+
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > section:nth-child(5) > nav:nth-child(2) > div:nth-child(1) > a > i {
+        font-size: 1.7em;
+        left: 32%;
+        transition: all 2s;
+    }
+
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > section:nth-child(5) > nav:nth-child(2) > div > a > i {
+        left: 23%;
+        top: 26%;
+        font-size: 1.9em;
+        transition: all 2s;
+    }
+}
 @media (max-width: 996px) {
     /*header*/
     .menu {
@@ -318,7 +404,12 @@ main > section:first-child > section:first-child > div:first-child {
         transition: all .5s;
     }
 
-    #blog {
+    .headingSecondShape {
+        right: -82px;
+        transition: all .5s;
+    }
+
+    #heading1 {
         left: 73px;
         transition: all .5s;
     }
@@ -355,6 +446,101 @@ main > section:first-child > section:first-child > div:first-child {
     }
 }
 
+@media (max-width: 425px) {
+    /*home section*/
+    main > section:first-child > section:first-child > div:first-child {
+        flex-direction: column-reverse;
+        margin-left: 15px;
+        margin-right: 15px;
+        padding-left: 0;
+    }
+
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) {
+        margin-bottom: 44px;
+        align-items: center;
+    }
+
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h3:first-child {
+        font-size: 20px;
+    }
+
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h1:nth-child(2) {
+        font-size: 29px;
+    }
+
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h1:nth-child(2) > span {
+        font-size: 29px;
+    }
+
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h1:nth-child(3) {
+        font-size: 35px;
+    }
+
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h1:nth-child(3) > span {
+        font-size: 35px;
+    }
+
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > button:nth-child(4) {
+        width: 127px;
+        height: 35px;
+        font-size: 15px;
+        margin-bottom: 33px;
+    }
+
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > button:nth-child(4) > div {
+        top: 3px;
+        left: 94px;
+        height: 29px;
+        width: 29px;
+    }
+
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > button:nth-child(4) > div:first-child > i:first-child {
+        font-size: 13px;
+        left: 31%;
+        top: 31%;
+    }
+
+    main > section:first-child > section:first-child > div:first-child > aside:first-child > section:nth-child(5) > h3:first-child {
+        display: none;
+    }
+
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) {
+        margin-bottom: 14px;
+        margin-top: -30px;
+    }
+
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > section:nth-child(5) > nav > div {
+        width: 36px;
+        height: 35px;
+        background: rgba(236, 240, 243, 50.85);
+        box-shadow: -23px -23px 45px #ffffff, 5px 1px 50px rgb(13 39 80);
+        border-radius: 15px;
+    }
+
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > section:nth-child(5) > nav:nth-child(2) > div > a > i {
+        left: 26%;
+        top: 26%;
+        font-size: 1.2em;
+        transition: all 2s;
+    }
+
+    main > section:first-child > section > div:first-child > aside:nth-child(2) > div:first-child {
+        width: 317px;
+        height: 382px;
+    }
+
+    main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > section:nth-child(5) > nav:nth-child(2) > div:nth-child(1) > a > i {
+        font-size: 1.2em;
+    }
+}
+
+@media (max-width: 375px) {
+    main > section:first-child > section > div:first-child > aside:nth-child(2) > div:first-child {
+    width: 300px;
+    height: 382px;
+}
+}
+/*========================================================================================================================
 /*  about section */
 
 main > section:nth-child(2) {
